Title now spans all the width, logo centered in place, title aligned with sidebar.

--- a/app/main-frame/main-frame.html
+++ b/app/main-frame/main-frame.html
@@ -1,7 +1,9 @@
 <!-- Load our partials' css file -->
 <link rel="stylesheet" href="main-frame.min.css"/>
 <header class="main-frame-header">
-  <img class="icon" src="https://www.kth.se/polopoly_fs/1.77257!/KTH_Logotyp_RGB_2013-2.svg"/>
+  <div class="icon-wrapper">
+    <img class="icon" src="https://www.kth.se/polopoly_fs/1.77257!/KTH_Logotyp_RGB_2013-2.svg"/>
+  </div>
   <div class="main-header-title"><h1>{{ screenInfo.title }}</h1></div>
 </header>
 
