Updated styling, news feed now supports three different layouts

--- a/app/home/home.html
+++ b/app/home/home.html
@@ -1,20 +1,25 @@
 <!-- Load our partials' css file <link rel="stylesheet" href="http://www.kth.se/css/v/8.28.4/kth.css"/>-->
-
-<div class="home_container">
+<div  id="home_container" class="home_container">
 	<div class="news_block">
-	<div *ngIf="news_block" [innerHtml]="news_block"></div>
+		<div id="news_item1" *ngIf="!news_feed_error" *ngIf="news_block" class="block_item" [innerHTML]="news_block">
+		</div>
+
 	<div *ngIf="news_feed_error">
-		<center><img src="app/find-person/images/Error-100.png"/></center>
-		<br>
-		<h3>The requested data is not available at the moment, please come again!</h3>
+		<center>
+			<img src="app/find-person/images/Error-100.png"/>
+			<br>
+			<h3>The requested data is not available at the moment.</h3>
+		</center>
 	</div>
 </div>
 <div class="calendar_block">
-	<div *ngIf="calendar_block"  [innerHtml]="calendar_block"></div>
+	<div [innerHtml]="calendar_block"></div>
 	<div *ngIf="calendar_error">
-		<center><img src="app/find-person/images/Error-100.png"/></center>
-		<br>
-		<h3>The requested data is not available at the moment, please come again!</h3>
+		<center>
+			<img src="app/find-person/images/Error-100.png"/>
+			<br>
+			<h3>The requested data is not available at the moment.</h3>
+		</center>
 	</div>
 </div>
 </div>
