--- a/app/main-frame/main-frame.html
+++ b/app/main-frame/main-frame.html
@@ -51,7 +51,7 @@
      'border-bottom': menuItemsTopBottomBorder[2]}">
       <div class="icon">
       <li>Places</li>
-      <img src="https://maxcdn.icons8.com/Android/PNG/96/Maps/map_marker-96.png" />
+      <img src="app/main-frame/images/map_icon2.svg" width="100" height="100"/>
       </div>
     </div>
     <div [routerLink] = "['Contact']" class="sidebar-item" [ngStyle]="{'border-right': menuItemsRightBorder[3]}">
