--- a/app/map/html/map.html
+++ b/app/map/html/map.html
@@ -1,7 +1,7 @@
 
 
  <div class="map_wrapper">
-   <INPUT id="center_button" type="image" (click)="centerOnMarker()" src="app/map/images/marker-icon-red.png" value="">
+   <INPUT id="center_button" style="border:2px solid" type="image" (click)="centerOnMarker()" src="app/map/images/zoom_center.png" height="42" width="42">
 		<auto-complete (newLocation)="addDestinationMarker($event)"></auto-complete>
 		  <div class="maps" id="map"></div>
 </div>
