--- a/app/home/home.html
+++ b/app/home/home.html
@@ -2,6 +2,11 @@
 <div  id="home_container" class="home_container">
 
 	<style>
+		a{
+			pointer-events: none;
+		}
+
+
 		#home_container {
 			width: 70%;
 			margin: 0 auto;
@@ -9,19 +14,27 @@
 		}
 
 		.news_block {
-			width: 75%;
+			margin-left:1%;
+			margin-right:1%;
+			width: 66%;
 			float: left;
 			display: inline;
-			margin: 0;
+			background-color:
 		}
 
 		.calendar_block {
-			width: 25%;
+			width: 31%;
 			float: right;
+			margin-right:1%;
 		}
 
 		.blockItem {
 			width: 650px;
+			margin-bottom:20px;
+		}
+		.block.teaser.noMedia{
+			padding:1rem;
+			background-color:#98ad29;
 		}
 	</style>
 
