Removed inlined HTML CSS
We have SCSS files, you know.

--- a/app/setup-process/setup-process.html
+++ b/app/setup-process/setup-process.html
@@ -15,7 +15,7 @@
 
   <h2>General Information</h2>
 
-  <table width="50%" border="0" style="margin-top: 1em">
+  <table>
     <tr class="item">
       <td>
         <p>Title of the screen</p>
@@ -83,9 +83,7 @@
   </table>
 
   <h2>Sidebar Information</h2>
-
-  <table width="50%" border="0" style="margin-top: 1rem">
-
+  <table>
     <tr class="item">
       <td>
         <p>Address</p>
