Telephone number for deliveries in contact sidebar.

--- a/app/main-frame/main-frame.html
+++ b/app/main-frame/main-frame.html
@@ -18,6 +18,10 @@
       Telephone:<br>
       {{ screenInfo.telephoneNumber }}
     </p>
+    <p>
+      Telephone deliveries:<br>
+      {{ screenInfo.telephone_deliveries }}
+    </p>
      <p class="open-hrs">
       Open:<br>
       Mon-Thu <span>08:00 - 17:00</span><br>
