Added link to Setup documentation on our Github wiki

--- a/app/setup-process/setup-process.html
+++ b/app/setup-process/setup-process.html
@@ -7,7 +7,7 @@
   </h1>
 
   <header>
-    <button type="button">Detailed documentation</button>
+    <a href="https://github.com/Project-Handbook/interactive-screens/wiki/Setup-Documentation"><button type="button">Detailed documentation</button></a>
     <br />
     <br />
     Or press the the '?' for detailed information about a certain input.
