Added link to our issue tracker on Github

--- a/app/setup-process/setup-process.html
+++ b/app/setup-process/setup-process.html
@@ -8,6 +8,7 @@
 
   <header>
     <a href="https://github.com/Project-Handbook/interactive-screens/wiki/Setup-Documentation"><button type="button">Detailed documentation</button></a>
+    <a href="https://github.com/Project-Handbook/interactive-screens/issues"><button type="button">Report an issue</button></a>
     <br />
     <br />
     Or press the the '?' for detailed information about a certain input.
