--- a/app/setup-process/setup-process.html
+++ b/app/setup-process/setup-process.html
@@ -178,6 +178,42 @@
       </td>
     </tr>
 
+    <tr class="item">
+      <td>
+        <p>Opening hours</p>
+        <p> <input type="checkbox"> Show opening hours </p> <br/>
+        Monday <br>
+        From: <input type="time" style="width: 10%;"> To: <input type="time" style="width: 10%;">
+        <br>
+        <b>Tuesday</b> <br>
+        From: <input type="time" style="width: 10%;"> To: <input type="time" style="width: 10%;">
+        <br>
+        Wednesday <br>
+        From: <input type="time" style="width: 10%;"> To: <input type="time" style="width: 10%;">
+        <br>
+        <b>Thursday</b> <br>
+        From: <input type="time" style="width: 10%;"> To: <input type="time" style="width: 10%;">
+        <br>
+        Friday <br>
+        From: <input type="time" style="width: 10%;"> To: <input type="time" style="width: 10%;">
+        <br>
+        <b>Saturday</b> <br>
+        From: <input type="time" style="width: 10%;"> To: <input type="time" style="width: 10%;">
+        <br>
+        Sunday <br>
+        From: <input type="time" style="width: 10%;"> To: <input type="time" style="width: 10%;">
+        <br>
+      </td>
+      <td>
+        <a href="javascript:void(0)" onclick="document.getElementById('opening-hours').style.display= document.getElementById('opening-hours').style.display == 'none' ? 'block' : 'none';">
+          <div class="qmark">?</div>
+        </a>
+      </td>
+      <td id="opening-hours" class="info" style="display: none;">
+        Opening hours of the nearest department, for example the closest reception to the screen, etc.
+      </td>
+    </tr>
+
   </table>
 
   <button class="button" (click)="loadInformation()">Load</button>
