Fixed bug nearest department showing twice in list of departments.

--- a/app/main-frame/main-frame.html
+++ b/app/main-frame/main-frame.html
@@ -29,8 +29,8 @@
     <h2>Departments</h2>
     <div>
       <b>{{ screenInfo.nearest_department }}</b>
-      <div *ngFor="#department of screenInfo.departments" *ngIf="!(department === screenInfo.nearest_department)">
-        {{ department }}
+      <div *ngFor="#department of screenInfo.departments">
+        <label *ngIf="!(department === screenInfo.nearest_department)"> {{ department }}</label>
       </div>
     </div>
   </div>
