Open hours now appear on the same line

--- a/app/main-frame/main-frame.html
+++ b/app/main-frame/main-frame.html
@@ -26,9 +26,9 @@
     </p>
      <p class="open-hrs">
       Open:<br>
-      Mon-Thu <span>08:00 - 17:00</span><br>
-      Friday <span>09:00 - 14:00</span><br>
-      Sat-Sun <span>Closed</span>
+      Mon-Thu 08:00 - 17:00<br>
+      Friday 09:00 - 14:00<br>
+      Sat-Sun Closed
     </p>
     <h2>Departments</h2>
     <div>
