Added a date time string to main-frame-header

--- a/app/main-frame/main-frame.html
+++ b/app/main-frame/main-frame.html
@@ -5,6 +5,7 @@
     <img class="icon" src="https://www.kth.se/polopoly_fs/1.77257!/KTH_Logotyp_RGB_2013-2.svg"/>
   </div>
   <div class="main-header-title"><h1>{{ screenInfo.title }}</h1></div>
+  <div class="main-header-clock"><h2>{{ clock }}</h2></div>
 </header>
 
 <div class="header-border"></div>
