--- a/app/main-frame/main-frame.html
+++ b/app/main-frame/main-frame.html
@@ -77,4 +77,4 @@
 <!-- Routed views go here -->
 <router-outlet></router-outlet>
 
-<footer id="footer"></footer>
+<footer id="footer"><img src="app/main-frame/images/footer.svg"  width="100%"></footer>
