--- a/app/main-frame/main-frame.html
+++ b/app/main-frame/main-frame.html
@@ -78,4 +78,4 @@
 <!-- Routed views go here -->
 <router-outlet></router-outlet>
 
-<footer id="footer"><img src="app/main-frame/images/footer.svg"  width="100%"></footer>
+<footer id="footer"><div class="footer_text" ><h3>SKOLAN FÖR DATAVETENSKAP OCH KOMMUNIKATION</h3></div></footer>
