--- a/app/find-person/person-profile.html
+++ b/app/find-person/person-profile.html
@@ -1,17 +1,8 @@
 <link rel="stylesheet" type="text/css" href="find-person.min.css" />
 
-<div class="person" (click)="toggle(!isOn,person)">
-	<img [src]="person.image_url" onError="this.src='app/find-person/images/missing-profile-image.png'"/>
-
-	<div class="person-info">
-		<p class="person-info-name">{{ person.given_name }} {{ person.family_name }}</p>
-		<p class="person-info-title">{{ getTitle(person.title) }}</p>
-	</div>
-</div>
-
-<div class="popup-pos" [ngClass]="{active: isOn, disabled: !isOn}" (click)="toggle(!isOn);">
+<div class="popup-pos" [ngClass]="{active: isOn, disabled: !isOn}">
 	<div class="popup-wrapper">
-		<div class="popup-content">
+		<div id="popup-content" *ngIf="person != null">
 			<div class="popup-person">
 				<div class="popup-person-wrapper">
 					<p class="popup-person-name">{{ person.given_name }} {{ person.family_name }}</p>
