Updated HTML & SCSS things to use x-y-z naming convention.

--- a/app/main-frame/main-frame.html
+++ b/app/main-frame/main-frame.html
@@ -10,8 +10,8 @@
 
 <div class="header-border"></div>
 
-<div class="contact_field">
-  <div class="inner_contact_field">
+<div class="contact-field">
+  <div class="inner-contact-field">
     <h2>Contact</h2>
     <p>Address:<br>
        {{ screenInfo.address }}<br>
